fix / Ajustado z-index da logo no footer

--- a/frontend/src/components/Footer/styles.module.scss
+++ b/frontend/src/components/Footer/styles.module.scss
@@ -61,6 +61,7 @@
 }
 
 .footerLogo {
+  z-index: 2;
   //padding: 13.875rem 0 0 0;
   padding-inline: 5%;
   max-width: 260px;
